      as an ordinary fixed effect to avoid the
      reparametrization via centering of the
      fixed effects design matrix.
      \item Do not compute the WAIC in \code{summary}
      by default anymore to reduce computation time
      of the method for larger models.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fix problems when predicting with \code{newdata}
      for zero-inflated and hurdle models thanks to
      Ruben Arslan.
      \item Fix problems when predicting with \code{newdata}
      if it is a subset of the data stored in a 
      \code{brmsfit} object thanks to Ruben Arslan.
    }
  }
}

\section{CHANGES IN VERSION 0.7.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Use variational inference algorithms
      as alternative to the NUTS sampler by specifying
      argument \code{algorithm} in the \code{brm} function.
      \item Implement beta regression models through family
      \code{Beta}.
      \item Implement zero-inflated binomial models through family
      \code{zero_inflated_binomial}.
      \item Implement multiplicative effects for family
      \code{bernoulli} to fit (among others) 2PL IRT models.
      \item Generalize the \code{formula} argument for zero-inflated
      and hurdle models so that predictors can be included in only 
      one of the two model parts thanks to the idea of Wade Blanchard.
      \item Combine fixed and random effects estimates using
      the new \code{coef} method.
      \item Call the \code{residuals} method with \code{newdata} thanks
      to the idea of Friederike Holz-Ebeling.
      \item Allow new levels of random effects grouping
      factors in the \code{predict}, \code{fitted}, and \code{residuals}
      methods using argument \code{allow_new_levels}.
      \item Selectively exclude random effects in the \code{predict}, 
      \code{fitted}, and \code{residuals} methods using 
      argument \code{re_formula}.
      \item Add a \code{plot} method for objects returned by